<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_10"
    tools:context=".ui.fragment.SearchFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:iconifiedByDefault="false"
        android:background="@drawable/bgr_view_search"
        app:defaultQueryHint="@string/app_name" />

    <TextView
        android:id="@+id/tvResultSearchNextActivitySearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/see_search_result"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dp_5"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recent_search_result"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        android:layout_marginBottom="@dimen/dp_5"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
