<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bgr_bottom_sheet_viewplay"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/choose"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgHideBottomSheetViewPlay"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/ic_close" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewRemoveViewPlay"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:background="@drawable/ic_delete2"
            android:backgroundTint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/remove"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewReloadViewPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:background="@drawable/ic_reload"
            android:backgroundTint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/reload_quotes"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewSaveTagViewPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <ImageView
            android:id="@+id/imgItemViewPlayFavoriteTag"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:background="@drawable/ic_favorite"
            android:backgroundTint="@color/black" />

        <TextView
            android:id="@+id/tvItemFavoriteTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/add_tag_favorite"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewSaveAuthorViewPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <ImageView
            android:id="@+id/imgItemViewPlayFavoriteAuthor"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:background="@drawable/ic_favorite"
            android:backgroundTint="@color/black" />

        <TextView
            android:id="@+id/tvItemFavoriteAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/add_author_favorite"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35" />
</LinearLayout>
